add update api
